fixed some uses of Java 9+ API in Java 8 projects